[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Finnkauski <iwiivi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
serenity = "0.8"
rss = "*"
hey_listen = "*"
white_rabbit = "*"
